# libtranslate.axera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_aarch64.sh  build_ax650.sh  build_axcl_aarch64.sh  build_axcl_x86.sh  run_web_rt.sh
.github/workflows/: build.yml
include/: ax_translate.h
pytranslate/: example.py  gradio_example.py  pyaxdev.py  pytranslate.py  requirements.txt
src/: LLM.hpp  ax_devices.cpp  ax_translate.cpp  tokenizer.hpp
src/runner/: LLM.cpp  LLM.hpp  LLMPostprocess.hpp
src/runner/ax650/: ax_model_runner_ax650.cpp
src/runner/ax_model_runner/: ax_model_runner.hpp  ax_model_runner_ax650.cpp  ax_model_runner_axcl.cpp
src/runner/axcl/: ax_model_runner_axcl.cpp
src/runner/utils/: ax_cmm_utils.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
tests/: infer.py  read_vocab.py  test_llm.cpp  test_tokenizer.cpp  test_translate.cpp  translate_cli.cpp  translate_svr.cpp
tests/tokenizer/: convert_tokenizer.py  qwen2_5_tokenizer.txt  test_tokenizer.cpp  test_tokenizer.py
web_rt/: server.py
web_rt/static/: app.js  index.html  style.css
